fixed issue with list background being too big

--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,22 @@ body{
     background-color: #273E47;
     text-align: center;
     color: white;
+    
 }
 
 li{
     font-size: 20px;
-    margin: 20px;
+    margin: 0 20% 0 20%;
     list-style: none;
     background-color: #36505a;
     display: block;
     
+}
+
+.list-div{
+    margin: 25px 35% 0 35%;
+    align-items: center;
+    word-wrap: break-word;
 }
 
 .lin{
